add INPUT files

--- a/src/doxygen.conf
+++ b/src/doxygen.conf
@@ -559,7 +559,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = mainpage.dox bessel.c cache.c casimir.c casimir_logdetD.c integration.c libcasimir.c logfac.c material.c matrix.c misc.c plm.c psd.c utils.c fcqs.c include/
+INPUT                  = mainpage.dox bessel.c cache.c casimir.c casimir_logdetD.c integration.c libcasimir.c logfac.c material.c matrix.c misc.c plm.c psd.c utils.c fcqs.c include/ cquadpack/include/quadpack.h libhodlr/include/hodlr.h
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
